CORE-225: Added template changes for the Nest JS to support Nest@8.0x

--- a/modules/openapi-generator/src/main/resources/typescript-nestjs/api.module.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-nestjs/api.module.mustache
@@ -1,5 +1,7 @@
-import { DynamicModule, HttpService, HttpModule, Module, Global } from '@nestjs/common';
+import { DynamicModule, Module, Global } from '@nestjs/common';
 import { Configuration } from './configuration';
+import { HttpService, HttpModule } from '@nestjs/axios';
+import { ConfigModule, ConfigService } from '@nestjs/config';
 
 {{#apiInfo}}
 {{#apis}}
@@ -9,7 +11,7 @@ import { {{classname}} } from './{{importPath}}';
 
 @Global()
 @Module({
-  imports:      [ HttpModule ],
+  imports:      [ HttpModule, ConfigModule ],
   exports:      [
     {{#apiInfo}}{{#apis}}{{classname}}{{^-last}},
     {{/-last}}{{/apis}}{{/apiInfo}}
