--- a/modules/openapi-generator/src/main/resources/typescript-nestjs/package.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-nestjs/package.mustache
@@ -28,9 +28,11 @@
     "@nestjs/common": "^{{nestVersion}}",
     "@nestjs/core": "^{{nestVersion}}",
     "@nestjs/platform-express": "^{{nestVersion}}",
+    "@nestjs/config": "1.1.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.3",
-    "rxjs": "^6.5.2"
+    "rxjs": "^7.1.0",
+    "@nestjs/axios": "^0.0.6"
   },
   "devDependencies": {
     "@nestjs/testing": "~{{nestVersion}}",
